--- a/css/app.css
+++ b/css/app.css
@@ -8,6 +8,18 @@ html{
     scroll-behavior: smooth ;
 }
 
+.loader{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 1000000000000;
+    background-color: white;
+}
+
+
 #header{
     font-family: 'Courgette', Courier, monospace;
     font-size: 2rem;
